examples/type_system/failing/106_let_annotation_int_string.flx
fn main() -> Unit {
    let x: Int = "hello"
}
